Initial Roadmap plan complete

--- a/www/blog/2021-05-02.md
+++ b/www/blog/2021-05-02.md
@@ -3,6 +3,7 @@ slug: core-concepts-1
 title: "#02: Core-Concepts-XX"
 authors: [nitya]
 tags: [swa, 30days, core-concepts]
+draft: true
 ---
 
 ## What We'll Cover Today
