--- a/www/blog/2021-05-06.md
+++ b/www/blog/2021-05-06.md
@@ -3,6 +3,7 @@ slug: core-concepts-5
 title: "#06: Core-Concepts-XX"
 authors: [nitya]
 tags: [swa, 30days, core-concepts]
+draft: true
 ---
 
 ## What We'll Cover Today
