--- a/www/blog/2021-05-10.md
+++ b/www/blog/2021-05-10.md
@@ -3,6 +3,7 @@ slug: usage-examples-2
 title: "#10: Usage-Examples-XX"
 authors: [nitya]
 tags: [swa, 30days, usage-examples]
+draft: true
 ---
 
 ## What We'll Cover Today
