Unpublishing all posts

--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -3,6 +3,7 @@ slug: kickoff
 title: "#01: Kickoff Time!"
 authors: [nitya, reshmi]
 tags: [swa, 30days]
+draft: true
 ---
 
 ![](../static/img/series/banner.png)
