--- a/www/blog/2021-04-30.md
+++ b/www/blog/2021-04-30.md
@@ -34,7 +34,7 @@ But there's more! _Are you new to Azure Static Web Apps?_ Do you want to get a b
 
 Watch this space for an update on a new content series that will help you jumpstart that learning journey! Throughout the month of May, we'll bring together a diverse group of technologists to share short articles with resources and insights on a curated tour of Static Web Apps - taking you from **code to scale**.
 
-![The #30DaysOfSWA logo](https://dev-to-uploads.s3.amazonaws.com/uploads/articles/lfd1j9lrlv8rl9cour9o.png)
+![The #30DaysOfSWA logo](../static/img/logo-light.png)
 
 
 ## How Can You Participate?
