Authors and Roadmap updated

--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -1,7 +1,7 @@
 ---
 slug: kickoff
 title: "#01: Kickoff Time!"
-authors: [nitya, reshmi]
+authors: [nitya, reshmi, simona, glaucia, anthony,joseph, mitali, michail]
 tags: [swa, 30days]
 draft: true
 ---
