--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -6,19 +6,25 @@ tags: [swa, 30days]
 draft: true
 ---
 
-![](../static/img/series/banner.png)
-
 Welcome to the first day of **#30DaysOfSWA** - our new month-long content series where we explore the amazing world of [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) (SWA) from core concepts to usage examples, developer tools and best practices. 
 
-## About The Series
+![](../static/img/series/banner.png)
 
-[Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) (SWA) is a service that automatically builds and deploys full-stack web apps to Azure from your code repository. The service [became generally available](https://azure.microsoft.com/updates/azure-static-web-apps-is-now-generally-available/) on May 12, 2021. 
+## On #30DaysOfSWA?
 
-We wanted to celebrate it's first anniversary this May with a learning tour of the service features and tooling, and help you bring your app ideas to life! Content is organized into 4 themed weeks based on  [this roadmap](/roadmap) :
- * **Week 1: Core Concepts** - Learn basic terminology, build & deploy an SWA.
- * **Week 2: Usage Examples** - Explore  various app scenarios and frameworks.
- * **Week 3: Developer Tools** - Learn to develop, debug, deploy, and test, your SWA!
- * **Week 4:Best Practices** - Explore service integrations and development tips.
+They say it takes 30 days to make a habit. In general, we've found that doing something consistently for a long period of time helps create focus and builds expertise. And that's also true for learning. So join us for 30 days of fun and functional articles that provide a guided tour of the [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) (SWA) service and ecosystem.
+
+_So, why now?_
+
+Azure Static Web Apps [became generally available](https://azure.microsoft.com/updates/azure-static-web-apps-is-now-generally-available/) on May 12, 2021 - making May 2022 a milestone month as we celebrate the first [#SWAanniversary](./2021-04-30.md). With a kickoff on May 1, that gives us 30 days till the end of May to celebrate all the things we love about modern web development, Azure Static Web Apps, and learning together. 
+
+## What will we cover?
+
+Take a look at the tentative [Roadmap](./../src/pages/roadmap.md) we've planned for this series. We've organized the journey into four stages, each building on the previous one in a way that mimics the developer experience with any new technology:
+ * **Week 1:** We focus on Core Concepts, learning terminology and getting setup.
+ * **Week 2:** We explore Usage Examples with different applications and technologies.
+ * **Week 3:** We skill up on Developer Tools to help develop, debug, test, and deploy, SWA!
+ * **Week 4:** We wrap with Best Practices, exploring service integrations and e2e dev experiences.
 
 Each article should take less than 5 minutes to read, and end with an activity or tutorial that will help reinforce what you learned. Content is designed to be beginner-friendly though we assume you have some familiarity with web development. Feedback is always welcome - share it on our [Discussion](https://github.com/orgs/staticwebdev/discussions/categories/-30daysofswa) board under `#30DaysOfSWA`.
  
@@ -26,21 +32,13 @@ Each article should take less than 5 minutes to read, and end with an activity o
 
 ## About The People
 
-This is a labor of love with contributions from multiple folks across the Microsoft Developer Relations and Static Web Apps product teams. Contributors are listed in alphabetical order (by last name) - check back for updates as the series progresses.
-
- * **Nitya Narasimhan**, Senior Cloud Advocate, Microsoft
- * **Reshmi Sriram**, Static Web Apps PM, Microsoft
- * 
- * 
+This is a labor of love with contributions from multiple folks across the Microsoft Developer Relations and Static Web Apps product teams. Contributors are listed in alphabetical order (by last name) - check back for updates as the series progresses.  The authors for Week 1 are listed in the header above!
 
 ---
 
-## Week 1: A Visual Roadmap
+## Visual: Roadmap
 
-Week 1 will focus on core concepts you need to know for Azure Static Web Apps. 
-* We'll start by introducing the big picture, building your first SWA and adding a serverless API endpoint. 
-* Next, we'll look at configuring application behaviors and build processes - and securing SWA with authentication and authorization support. 
-* Finally, we'll talk about deployment - from previewing staged versions of SWA to using custom domains and deploying from other code source platforms. 
+Want a visual tour of what we'll cover this week? Here you go: 
 
 ![](../static/img/series/roadmap.png)
 
@@ -48,6 +46,6 @@ By the end of the week you should be familiar with SWA terminology and developer
 
 ---
 
-### Ready To Learn? Let's Go!
+## Let's Get Started!
 
 ![](../static/img/logo.svg)
