--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -1,51 +1,79 @@
 ---
 slug: kickoff
-title: "#01: Kickoff Time!"
+title: "Kickoff #30DaysOfSWA!"
 authors: [nitya, reshmi, simona, glaucia, anthony,joseph, mitali, michail]
 tags: [swa, 30days]
 draft: true
 ---
 
-Welcome to the first day of **#30DaysOfSWA** - our new month-long content series where we explore the amazing world of [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) (SWA) from core concepts to usage examples, developer tools and best practices. 
+Welcome to the first day of **#30DaysOfSWA**!!
 
-![](../static/img/series/banner.png)
+Thank you for joining us on this fun and functional tour of **Azure Static Web Apps**. Whether you're new to the technology, or an experienced user, we hope there's something that interests and motivates you to keep going.
 
-## On #30DaysOfSWA?
+![](../static/img/series/banner-kickoff.png)
 
-They say it takes 30 days to make a habit. In general, we've found that doing something consistently for a long period of time helps create focus and builds expertise. And that's also true for learning. So join us for 30 days of fun and functional articles that provide a guided tour of the [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview) (SWA) service and ecosystem.
+## Hello #30DaysOfSWA
 
-_So, why now?_
+Simply put, it's a month-long series of blog posts that provides you a curated and structured tour through the universe of  [Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview?WT.mc_id=30daysofswa-61155-cxall). 
 
-Azure Static Web Apps [became generally available](https://azure.microsoft.com/updates/azure-static-web-apps-is-now-generally-available/) on May 12, 2021 - making May 2022 a milestone month as we celebrate the first [#SWAanniversary](./2021-04-30.md). With a kickoff on May 1, that gives us 30 days till the end of May to celebrate all the things we love about modern web development, Azure Static Web Apps, and learning together. 
+ * Each article will be 5 mins or less in reading time
+ * Each ends with an activity to help reinforce the learning
+ * Articles will follow a structured roadmap over 4 weeks
 
-## What will we cover?
+We've organized the journey into four stages, each building on the previous one in a way that mimics the developer experience with any new technology:
+ * **Week 1:** Focus on Core Concepts, learning terminology and getting setup.
+ * **Week 2:** Focus on Usage Examples with quickstarts & front-end technologies.
+ * **Week 3:** Focus on Dev Tools to develop, debug, test, and deploy, the SWA!
+ * **Week 4:** Focus on Best Practices, from services to end-to-end experiences.
 
-Take a look at the tentative [Roadmap](./../src/pages/roadmap.md) we've planned for this series. We've organized the journey into four stages, each building on the previous one in a way that mimics the developer experience with any new technology:
- * **Week 1:** We focus on Core Concepts, learning terminology and getting setup.
- * **Week 2:** We explore Usage Examples with different applications and technologies.
- * **Week 3:** We skill up on Developer Tools to help develop, debug, test, and deploy, SWA!
- * **Week 4:** We wrap with Best Practices, exploring service integrations and e2e dev experiences.
+## Week 1 Roadmap
 
-Each article should take less than 5 minutes to read, and end with an activity or tutorial that will help reinforce what you learned. Content is designed to be beginner-friendly though we assume you have some familiarity with web development. Feedback is always welcome - share it on our [Discussion](https://github.com/orgs/staticwebdev/discussions/categories/-30daysofswa) board under `#30DaysOfSWA`.
- 
----
+We are kicking off week 1 with a focus on **Core Concepts** to get you familiar with the high-level architecture, fundamental components and basic terminology for Azure Static Web Apps. Want a sneak peek at the topics? Here's a visual guide to help you!
 
-## About The People
+![](../static/img/series/week1-roadmap.png)
 
-This is a labor of love with contributions from multiple folks across the Microsoft Developer Relations and Static Web Apps product teams. Contributors are listed in alphabetical order (by last name) - check back for updates as the series progresses.  The authors for Week 1 are listed in the header above!
-
----
-
-## Visual: Roadmap
-
-Want a visual tour of what we'll cover this week? Here you go: 
-
-![](../static/img/series/roadmap.png)
+**By the end of week 1 you should know**:
+ * What Azure Static Web Apps is, and its benefits
+ * How to get started building SWA or using it for your existing apps
+ * How to go serverless, adding API capability with Azure Functions
+ * How to configure SWA - from app behavior to build process
+ * How to secure SWA - from user authentication to role-based authorization
+ * How to preview SWA - on pull requests or test branches
+ * How to deploy SWA - using different code sources, or CI/CD options
 
 By the end of the week you should be familiar with SWA terminology and developer workflows - and be ready to explore usage scenarios with various front-end frameworks or static site generators!
+
+## Take The Journey
+
+They say it takes 30 days to make a habit. It's our hope that doing short bursts of reading and activity with Azure Static Web Apps on a daily basis, will lead to better learning and development habits in general.
+
+We want to make it easy for you to participate - here are options to follow along:
+ * Bookmark [this site](https://aka.ms/30DaysofSWA) and visit daily
+ * Subscribe to the [RSS Feed](https://lively-tree-0c3a7d80f.1.azurestaticapps.net/blog/rss.xml) in your favorite Feed Reader
+ * Visit the [dev.to Series Page](https://dev.to/nitya/series/17901) and like, comment on, or bookmark, the posts.
+
+Want to really get the most from this? Try the exercises each day, and take a moment on a weekly basis, to write a blog post or capture your own notes on what your main takeaways were. As a fan of [visual storytelling](https://twitter.com/sketchthedocs) I know that writing things down helps improve your understanding and recall of the material!
+
+## Provide Us Feedback
+
+**We want to make this useful and beginner-friendly!** So if you have comments or questions that can help us improve this content, please drop us a note in our [Discussions](https://github.com/orgs/staticwebdev/discussions/categories/-30daysofswa) board!
+
+
+## Meet The Authors
+
+Articles are written by a multi-disciplinary team of contributors from across Microsoft and the community - including members of the Static Web Apps product group and Microsoft Developer Relations. 
+
+We'll keep this page updated on a daily basis, to reflect the latest author whose post was published. We'll kick things off with the authors of this post.
+ * **Nitya Narasimhan**, Senior Cloud Advocate @Microsoft
+ * **Reshmi Sriram**, Static Web Apps PM @Microsoft
+ * _to be updated daily ..._
+
+Each post will identify the authors by name, and link to a relevant online profile. This series is a labor of love, so if you like a post - show that author some love by providing feedback or saying hello on their identified profile!
 
 ---
 
 ## Let's Get Started!
+
+I think that's all you need to know for now! Hope your're as excited as we are. Check back for the next post and ... **#LetsDoThis** !!
 
 ![](../static/img/logo.svg)
