Kickoff Post Published

--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -3,7 +3,7 @@ slug: kickoff
 title: "Kickoff #30DaysOfSWA!"
 authors: [nitya, reshmi, simona, glaucia, anthony,joseph, mitali, michail]
 tags: [swa, 30days]
-draft: true
+draft: false
 ---
 
 Welcome to the first day of **#30DaysOfSWA**!!
