Added people banner

--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -30,7 +30,7 @@ We've organized the journey into four stages, each building on the previous one 
 
 We are kicking off week 1 with a focus on **Core Concepts** to get you familiar with the high-level architecture, fundamental components and basic terminology for Azure Static Web Apps. Want a sneak peek at the topics? Here's a visual guide to help you!
 
-![](../static/img/series/week1-roadmap.png)
+![Visual sketchnote of roadmap](../static/img/series/week1-roadmap.png)
 
 **By the end of week 1 you should know**:
  * What Azure Static Web Apps is, and its benefits
@@ -62,6 +62,8 @@ Want to really get the most from this? Try the exercises each day, and take a mo
 ## Meet The Authors
 
 Articles are written by a multi-disciplinary team of contributors from across Microsoft and the community - including members of the Static Web Apps product group and Microsoft Developer Relations. 
+
+![Banner with people](../static/img/series/series-people.png)
 
 We'll keep this page updated on a daily basis, to reflect the latest author whose post was published. We'll kick things off with the authors of this post.
  * **Nitya Narasimhan**, Senior Cloud Advocate @Microsoft
