Day 1 Post Published

--- a/www/blog/2021-05-02.md
+++ b/www/blog/2021-05-02.md
@@ -3,7 +3,7 @@ slug: introducing-swa
 title: "#01: Introducing SWA"
 authors: [simona, nitya]
 tags: [swa, 30days, core-concepts]
-draft: false
+draft: true
 ---
 
 Welcome to `Week 1, Day 1` of **#30DaysOfSWA**!! 
@@ -68,7 +68,7 @@ But wait - there's one more thing.
 
 We've talked about what SWA is, how it's architected, and where you can use it. But what are the key features that make it powerful? [**Read the Documentation**](https://docs.microsoft.com/en-us/azure/static-web-apps/overview#key-features) for the detailed list - or scan the visual guide below for a summary!
 
-![](../static/img/series/roadmap.png)
+![](../static/img/series/01-ten-things.png)
 
 
 
