Publishing #01: Introducing SWA

--- a/www/blog/2021-05-02.md
+++ b/www/blog/2021-05-02.md
@@ -3,7 +3,7 @@ slug: introducing-swa
 title: "#01: Introducing SWA"
 authors: [simona, nitya]
 tags: [swa, 30days, core-concepts]
-draft: true
+draft: false
 ---
 
 Welcome to `Week 1, Day 1` of **#30DaysOfSWA**!! 
