Week 1 banners+post placeholders added

--- a/www/blog/2021-05-03.md
+++ b/www/blog/2021-05-03.md
@@ -71,27 +71,30 @@ Once deployment completes (you should see the success notification), visit the A
  2. `Edit Workflow` - click to see automated [GitHub Actions](https://github.com/fearlessly-dev/my-first-swa/blob/main/.github/workflows/azure-static-web-apps-witty-desert-019fd800f.yml) setup for the SWA.
  3. `Open in Portal` - click to manage the SWA in the Azure Portal.
 
+**That's it!! You just deployed your first Static Web App with just a few clicks and configuration inputs!** 🎉
+
+
 ### 1.4 Let's Unpack
 
-So what happened? 
+So what happened under the hood? 
 
-If you look at your [codebase](https://github.com/fearlessly-dev/my-first-swa) you will find one key change - the Azure SWA service [sets up the GitHub Actions workflow](https://github.com/fearlessly-dev/my-first-swa/commit/1441e25149f1573a7010682e0a431263fbd89cb6) for you, directly in the repo, with no manual intervention needed from you!
+If you look at your [codebase](https://github.com/fearlessly-dev/my-first-swa) you'll see **one key change** - the Azure SWA service [sets up the GitHub Actions workflow](https://github.com/fearlessly-dev/my-first-swa/commit/1441e25149f1573a7010682e0a431263fbd89cb6) for you, directly in the repo using your GitHub credentials. No manual steps needed from you!
 
-The workflow automates the build/deploy process on both code commit (`push`) and contribution (`pull request`) events. Now, when you make changes to your application code, the commit process will automatically rebuild and deploy your Static Web App _automatically_ for you.
+The workflow automates the build/deploy process on both code commit (`push`) and contribution (`pull request`) events. So when you make changes to your application code, it triggers the workflow to automatically rebuild and deploy the updated Static Web App. 🙌🏽
 
 ### 1.5 Video Tutorial
 
-Prefer to see this in video form? Check out this 2-minute [Azure Static Web Apps: Tips & Tricks](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/) video that shows a different vanilla-JS application being configured and deployed - using the Visual Studio Code option - to Static Web Apps!
+Want to see a video walkthrough of the process? Check out this 2-minute [Azure Static Web Apps: Tips & Tricks](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/) video from 2021. It features a different vanilla-JS application but follows the same "Quickstart with Visual Studio Code" steps so you can see them in action! 
 
 <iframe width="560" height="315" frameborder="0" src="https://aka.ms/docs/player?show=azure-tips-and-tricks-static-web-apps&ep=how-to-deploy-your-first-azure-static-web-apps-3-of-16--azure-tips-and-tricks-static-web-apps"></iframe>
 
-## 2. Let's Go Further!
+## 2. "There is No Try!"
 
-You realize today is May 3rd, right? That means tomorrow is May 4 - and what better way to celebrate our favorite movie call-to-action (`MayTheFourthBeWithYou`) than to pay homage with our own custom crafted movie banner sharing our origin story.
+You realize today is May 3rd, right? That means tomorrow is May 4 - and what better way to celebrate our favorite movie call-to-action (`MayTheFourthBeWithYou`) than to pay homage with our own custom crafted movie banner sharing our origin story. 
 
 ![Build a crawler with Azure Static Web Apps](../static/img/series/02-banner-glaucia.png)
 
-Try out this 3-part tutorial to take the basic HTML/CSS/JS application to the next level - and recreate the iconic introduction from the classic [Star Wars](https://en.wikipedia.org/wiki/Star_Wars) franchise. 
+Try out this 3-part tutorial to take the basic HTML/CSS/JS application to the next level - and recreate the iconic introduction from the classic [Star Wars](https://en.wikipedia.org/wiki/Star_Wars) franchise. Just do the thing! 
 
  1. [Part 1: Create basic page and style it with HTML/CSS](https://dev.to/azure/building-star-wars-crawler-with-azure-static-web-apps-part-1-3o39) 
  2. [Part 2: Bring moving banner to life with JS](https://dev.to/azure/building-star-wars-crawler-with-azure-static-web-apps-part-2-3hc0)
