--- a/www/blog/2021-05-04.md
+++ b/www/blog/2021-05-04.md
@@ -3,7 +3,7 @@ slug: api-enabling-swa
 title: "#03: API-Enabling SWA"
 authors: [anthony, nitya]
 tags: [swa, 30days, core-concepts]
-draft: false
+draft: true 
 ---
 
 Welcome to `Week 1, Day 3` of **#30DaysOfSWA**!! 
