--- a/www/blog/2021-05-06.md
+++ b/www/blog/2021-05-06.md
@@ -3,7 +3,7 @@ slug: securing-swa
 title: "#05: Securing SWA"
 authors: [mitali, nitya]
 tags: [swa, 30days, core-concepts]
-draft: false
+draft: true 
 ---
 
 Welcome to `Week 1, Day 5` of **#30DaysOfSWA**!! 
