--- a/www/blog/2021-05-08.md
+++ b/www/blog/2021-05-08.md
@@ -3,7 +3,7 @@ slug: deploying-swa
 title: "#07: Deploying SWA"
 authors: [reshmi]
 tags: [swa, 30days, core-concepts]
-draft: false
+draft: true 
 ---
 
 Welcome to `Week 1, Day 3` of **#30DaysOfSWA**!! 
