--- a/www/blog/2021-05-05.md
+++ b/www/blog/2021-05-05.md
@@ -3,7 +3,7 @@ slug: configuring-swa
 title: "#04: Configuring SWA"
 authors: [joseph, nitya]
 tags: [swa, 30days, core-concepts]
-draft: false
+draft: true 
 ---
 
 Welcome to `Week 1, Day 4` of **#30DaysOfSWA**!! 
