Day 3 Post: Drafted

--- a/www/blog/2021-04-30.md
+++ b/www/blog/2021-04-30.md
@@ -41,7 +41,7 @@ Watch this space for an update on a new content series that will help you jumpst
 
 Some actions you can take today to get ready for a fun month of learning:
  
-  * Bookmark this Series page or [**Subscribe to the RSS feed**](https://lively-tree-0c3a7d80f.1.azurestaticapps.net/blog/rss.xml)
+  * Bookmark this Series page or [**Subscribe to the RSS feed**](https://aka.ms/30DaysOfSWA/rss)
   * Follow the [**#staticwebapps tag on dev.to**](https://dev.to/t/staticwebapps) - and consider making a post there!
   * Introduce yourself on [**our Discussions Forum**](https://github.com/orgs/staticwebdev/discussions/categories/-30daysofswa) - tell us what you hope to learn!
 
