--- a/www/blog/2021-05-01.md
+++ b/www/blog/2021-05-01.md
@@ -49,7 +49,7 @@ They say it takes 30 days to make a habit. It's our hope that doing short bursts
 
 We want to make it easy for you to participate - here are options to follow along:
  * Bookmark [this site](https://aka.ms/30DaysofSWA) and visit daily
- * Subscribe to the [RSS Feed](https://lively-tree-0c3a7d80f.1.azurestaticapps.net/blog/rss.xml) in your favorite Feed Reader
+ * Subscribe to the [RSS Feed](https://aka.ms/30DaysOfSWA/rss) in your favorite Feed Reader
  * Visit the [dev.to Series Page](https://dev.to/nitya/series/17901) and like, comment on, or bookmark, the posts.
 
 Want to really get the most from this? Try the exercises each day, and take a moment on a weekly basis, to write a blog post or capture your own notes on what your main takeaways were. As a fan of [visual storytelling](https://twitter.com/sketchthedocs) I know that writing things down helps improve your understanding and recall of the material!
