Fixed link bug, added placeholders for Week 1

--- a/www/blog/2021-04-30.md
+++ b/www/blog/2021-04-30.md
@@ -8,7 +8,7 @@ draft: false
 
 ![](../static/img/swanniversary.png)
 
-#### View Schedule & Speaker Lineup: [https://aka.ms/swaanniversary](https://aka.ms/swaanniv[ersary)
+#### View Schedule & Speaker Lineup: [https://aka.ms/swaanniversary](https://aka.ms/swaanniversary)
 
 ---
 
