Added more placeholders

--- a/www/blog/2021-05-09.md
+++ b/www/blog/2021-05-09.md
@@ -1,5 +1,5 @@
 ---
-slug: securing-swa
+slug: build-with-astro
 title: "#08: Build SWA With Astro"
 authors: [glaucia]
 tags: [swa, 30days, usage-examples]
