--- a/www/blog/2021-05-15.md
+++ b/www/blog/2021-05-15.md
@@ -1,6 +1,6 @@
 ---
-slug: building-with-docusaurus
-title: "#12: Build SWA With Blazor"
+slug: build-with-vuejs
+title: "#08: Build SWA With Vue.js"
 authors: []
 tags: [swa, 30days, usage-examples]
 draft: true 
