All placeholders completed

--- a/www/blog/2021-05-14.md
+++ b/www/blog/2021-05-14.md
@@ -5,3 +5,16 @@ authors: []
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
+Welcome to `Week 2, Day 6` of **#30DaysOfSWA**!! 
+
+Yesterday we talked about .... Today we'll explore ...
+
+
+## What We'll Cover
+ * 
+ * 
+ * 
+ * **Exercise** 
+ * **Resource(s):** 
+
+![](../static/img/series/banner.png)
