--- a/www/blog/2021-05-12.md
+++ b/www/blog/2021-05-12.md
@@ -5,3 +5,17 @@ authors: [nitya]
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
+
+Welcome to `Week 2, Day 4` of **#30DaysOfSWA**!! 
+
+Yesterday we talked about .... Today we'll explore ...
+
+
+## What We'll Cover
+ * 
+ * 
+ * 
+ * **Exercise** 
+ * **Resource(s):** 
+
+![](../static/img/series/banner.png)
