--- a/www/blog/2021-05-15.md
+++ b/www/blog/2021-05-15.md
@@ -1,7 +1,21 @@
 ---
 slug: build-with-vuejs
-title: "#08: Build SWA With Vue.js"
+title: "#14: Build SWA With Vue.js"
 authors: []
 tags: [swa, 30days, usage-examples]
 draft: true 
 ---
+
+Welcome to `Week 2, Day 7` of **#30DaysOfSWA**!! 
+
+Yesterday we talked about .... Today we'll explore ...
+
+
+## What We'll Cover
+ * 
+ * 
+ * 
+ * **Exercise** 
+ * **Resource(s):** 
+
+![](../static/img/series/banner.png)
