--- a/www/blog/2021-05-21.md
+++ b/www/blog/2021-05-21.md
@@ -1,12 +1,11 @@
 ---
-slug: build-with-react
-title: "#09: Build SWA With React"
+slug: devtools-swacli-deploy
+title: "#20: Deploy with SWA CLI"
 authors: []
-tags: [swa, 30days, usage-examples]
+tags: [swa, 30days, dev-tools]
 draft: true 
 ---
-
-Welcome to `Week 2, Day 2` of **#30DaysOfSWA**!! 
+Welcome to `Week 3, Day 6` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
 
