--- a/www/blog/2021-05-23.md
+++ b/www/blog/2021-05-23.md
@@ -1,12 +1,12 @@
 ---
-slug: build-with-react
-title: "#09: Build SWA With React"
+slug: practices-e2e
+title: "#22: E2E Development & SWA"
 authors: []
-tags: [swa, 30days, usage-examples]
+tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
-Welcome to `Week 2, Day 2` of **#30DaysOfSWA**!! 
+Welcome to `Week 4, Day 1` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
 
