--- a/www/blog/2021-05-24.md
+++ b/www/blog/2021-05-24.md
@@ -1,12 +1,13 @@
 ---
-slug: build-with-react
-title: "#09: Build SWA With React"
+slug: practices-cognitive-search
+title: "#23: Cognitive Search & SWA"
 authors: []
-tags: [swa, 30days, usage-examples]
+tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
-Welcome to `Week 2, Day 2` of **#30DaysOfSWA**!! 
+
+Welcome to `Week 4, Day 2` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
 
