Fixed localized URLs

--- a/www/blog/2021-05-05.md
+++ b/www/blog/2021-05-05.md
@@ -29,18 +29,18 @@ When we think of configuring the Static Web App, we have three potential targets
  * **Build**: Static Web Apps automates your build/deploy workflow using GitHub Actions or Azure Pipelines, configurable via the relevant YAML files. For example, this would be the `.github/workflows/azure-static-web-apps-xxx.yml` file in your repo, for GitHub Actions.
  * **Environment:** Sometimes configuration values may only be known at runtime - e.g., database connection strings. By using environment variables, you can update the _values_ at runtime without having to change the application code that uses them. Environment variables can be set in the Azure Portal (for production) or in _local settings files_ (for development.)
 
-Let's take a quick look at what each of these provides, along with resource links for deeper dives that you can explore on your own. Check out the [example scenarios](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration-overview#example-scenarios) to get a better understanding of which file (or concept) you need to focus on, for specific scenarios.
+Let's take a quick look at what each of these provides, along with resource links for deeper dives that you can explore on your own. Check out the [example scenarios](https://docs.microsoft.com/azure/static-web-apps/configuration-overview#example-scenarios) to get a better understanding of which file (or concept) you need to focus on, for specific scenarios.
 
 ## Config: Application
 
 Application behavior is configured using the _staticwebapp.config.json_ file located in the folder defined by `app_location`. Here are a _subset_ of the properties and their purpose:
 
- * [**"routes"**](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#routes) - are an array of "route" objects that can each be associated with access rules ("allowedRoles"), actions ("redirect", "rewrite") - and request ("methods") and response ("headers","statusCode") properties.
- * [**"navigationFallback"**](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#fallback-routes) supports applications that rely on client-side routing by providing a server-side fallback route which serves the required page, with filters to control usage.
- * [**"responseOverrides"**](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#response-overrides) allows you to return a custom response instead of default HTTP error codes, for more user-friendly experiences.
- * [**"platform"**](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#platform) sets platform-specific configurations like _apiRuntime_ for API language runtime version.
+ * [**"routes"**](https://docs.microsoft.com/azure/static-web-apps/configuration#routes) - are an array of "route" objects that can each be associated with access rules ("allowedRoles"), actions ("redirect", "rewrite") - and request ("methods") and response ("headers","statusCode") properties.
+ * [**"navigationFallback"**](https://docs.microsoft.com/azure/static-web-apps/configuration#fallback-routes) supports applications that rely on client-side routing by providing a server-side fallback route which serves the required page, with filters to control usage.
+ * [**"responseOverrides"**](https://docs.microsoft.com/azure/static-web-apps/configuration#response-overrides) allows you to return a custom response instead of default HTTP error codes, for more user-friendly experiences.
+ * [**"platform"**](https://docs.microsoft.com/azure/static-web-apps/configuration#platform) sets platform-specific configurations like _apiRuntime_ for API language runtime version.
 
- There are also configuration properties for authentication, networking, global headers, custom MIME types and more. Check out the [documentation](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#file-location) for the complete list and scan this **example** [staticwebapp.config.json](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration#example-configuration-file) to understand how these are defined.
+ There are also configuration properties for authentication, networking, global headers, custom MIME types and more. Check out the [documentation](https://docs.microsoft.com/azure/static-web-apps/configuration#file-location) for the complete list and scan this **example** [staticwebapp.config.json](https://docs.microsoft.com/azure/static-web-apps/configuration#example-configuration-file) to understand how these are defined.
 
 ```json
 {
@@ -144,23 +144,23 @@ The main settings you need to be familiar with are:
  * `skip_api_build` - flag to skip api build step (if true)
  * `build_timeout_in_minutes` - defaults to 15 (customize to extend)
 
-Read [**this document**](https://docs.microsoft.com/en-us/azure/static-web-apps/build-configuration?tabs=azure-devops#environment-variables) to learn how each of those properties can be customized and used effectively.
+Read [**this document**](https://docs.microsoft.com/azure/static-web-apps/build-configuration?tabs=azure-devops#environment-variables) to learn how each of those properties can be customized and used effectively.
 
 
-## Config: Env Vars
+## Config: Environment
 
-Your application behavior configuration values may change based on the runtime context. By setting values in _environment variables_, you can decouple definition of values from their usage within application code. We refer to these environment variables as [**application settings**](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings) which are copied to both staging and production environments. 
+Your application behavior configuration values may change based on the runtime context. By setting values in _environment variables_, you can decouple definition of values from their usage within application code. We refer to these environment variables as [**application settings**](https://docs.microsoft.com/azure/static-web-apps/application-settings) which are copied to both staging and production environments. 
 
 But where are they _defined?_ That depends on the development stage:
 
- * **[Local Development:](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings#configure-api-application-settings-for-local-development)** When developing your app, you can use a local settings file that is not tracked by GitHub so sensitive information is not leaked. **Azure Functions** uses the `api/local.settings.json` file to store relevant app settings - and watch out for a special 2-part series of posts in Week 3 where we cover the local settings file used by the [**Static Web Apps CLI**](https://github.com/Azure/static-web-apps-cli) for a simpler, unified local development experience.
- * [**Staging/Production:**](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings#configure-application-settings) You can define and configure these application settings in the [Azure Portal](https://portal.azure.com/) via the browser, or by using the [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/) (see the [`az staticwebapp appsettings`](https://docs.microsoft.com/en-us/cli/azure/staticwebapp/appsettings?view=azure-cli-latest) documentation), to create and manage your application settings. These will be encrypted, and copied to staging and production environments.
+ * **[Local Development:](https://docs.microsoft.com/azure/static-web-apps/application-settings#configure-api-application-settings-for-local-development)** When developing your app, you can use a local settings file that is not tracked by GitHub so sensitive information is not leaked. **Azure Functions** uses the `api/local.settings.json` file to store relevant app settings - and watch out for a special 2-part series of posts in Week 3 where we cover the local settings file used by the [**Static Web Apps CLI**](https://github.com/Azure/static-web-apps-cli) for a simpler, unified local development experience.
+ * [**Staging/Production:**](https://docs.microsoft.com/azure/static-web-apps/application-settings#configure-application-settings) You can define and configure these application settings in the [Azure Portal](https://portal.azure.com/) via the browser, or by using the [Azure CLI](https://docs.microsoft.com/cli/azure/) (see the [`az staticwebapp appsettings`](https://docs.microsoft.com/cli/azure/staticwebapp/appsettings?view=azure-cli-latest) documentation), to create and manage your application settings. These will be encrypted, and copied to staging and production environments.
 
-Learn more about how you can configure application settings in [the documentation](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings#configure-application-settings).
+Learn more about how you can configure application settings in [the documentation](https://docs.microsoft.com/azure/static-web-apps/application-settings#configure-application-settings).
 
 ## How-Tos: Watch It!
 
-Want to see how application behavior configuration in action? Check out these two videos from the [Azure Static Web Apps: Tips & Tricks](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/) series.
+Want to see how application behavior configuration in action? Check out these two videos from the [Azure Static Web Apps: Tips & Tricks](https://docs.microsoft.com/shows/azure-tips-and-tricks-static-web-apps/) series.
 
 <iframe width="560" height="315" frameborder="0"  src="https://aka.ms/docs/player?show=azure-tips-and-tricks-static-web-apps&ep=how-to-configure-routing-in-azure-static-web-apps-6-of-16--azure-tips-and-tricks-static-web-apps"></iframe>
 
@@ -175,10 +175,10 @@ It was recently updated to reflect best practices. Explore the configuration fil
 
 ## Useful Resources
 
- 1. [Configuration Overview](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration-overview)
- 2. [Application Configuration: staticwebapp.config.json](https://docs.microsoft.com/en-us/azure/static-web-apps/configuration)
- 3. [Build Configuration: Actions or Pipelines YAML](https://docs.microsoft.com/en-us/azure/static-web-apps/build-configuration?tabs=github-actions)
- 4. [Environment Configurations: For Backends](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings)
- 5. [Configure Application Settings](https://docs.microsoft.com/en-us/azure/static-web-apps/application-settings)
+ 1. [Configuration Overview](https://docs.microsoft.com/azure/static-web-apps/configuration-overview)
+ 2. [Application Configuration: staticwebapp.config.json](https://docs.microsoft.com/azure/static-web-apps/configuration)
+ 3. [Build Configuration: Actions or Pipelines YAML](https://docs.microsoft.com/azure/static-web-apps/build-configuration?tabs=github-actions)
+ 4. [Environment Configurations: For Backends](https://docs.microsoft.com//azure/static-web-apps/application-settings)
+ 5. [Configure Application Settings](https://docs.microsoft.com/azure/static-web-apps/application-settings)
  6. [SWA Bank Repo](https://github.com/sinedied/swa-bank) - a Static Web Apps project to explore and learn from.
 
