Cosmetic fixes - link, banner

--- a/www/blog/2021-05-04.md
+++ b/www/blog/2021-05-04.md
@@ -51,7 +51,7 @@ The Free plan supports only the Managed Functions option. It has [some limitatio
 Want to get some hands-on experience with adding an API endpoint to your Static Web Apps deployment? Check out this [Quickstart](https://docs.microsoft.com/en-us/azure/static-web-apps/add-api?tabs=vanilla-javascript) tutorial that builds on the vanilla-JS application you deployed previously. The key steps are:
 
 **1. Setup Azure Functions for SWA**
- * Install the [Azure Functions Extension](https://marketplace.visualstudio.com/items?) for VS Code.
+ * Install the [Azure Functions Extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurefunctions) for VS Code.
  * Open your application root folder ("/") - create an "api" subfolder
  * Select "Azure Static Web Apps: Create HTTP Function" through Command Palette or select the lightning bolt option in Azure extension menu.
  * Enter required configuration information (language="JavaScript", function name="message"), and confirm.
