Added draft outline for #5:Securing SWA

--- a/www/blog/2021-05-06.md
+++ b/www/blog/2021-05-06.md
@@ -8,14 +8,70 @@ draft: true
 
 Welcome to `Week 1, Day 5` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+Yesterday we looked at the different configuration files and properties available to us, to customize our application behaviors and build workflows with Azure Static Web Apps. Today we'll explore the exciting topic of **Security** in Static Web Apps - from authenticating users, to accessing authenticated user information, managing user roles, and authorizing access based on that role.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * How do we secure a SWA?
+ * Managed authentication
+ * Custom authentication
+ * Managing user roles
+ * Role-based authorization
+ * Accessing user information
 
 ![](../static/img/series/05-banner.png)
+
+
+## Securing SWA
+`TODO`: 
+
+## Managed Auth
+`TODO`: 
+
+## Custom Auth 
+`TODO`: 
+
+## User Roles
+`TODO`: 
+
+## Role-Based Auth
+`TODO`: 
+
+## Access User Info
+`TODO`: 
+
+
+---
+
+## How-Tos: Watch It!
+
+Prefer a Video Walkthrough to understand the process? We have you covered with the [Azure Tips And Tricks: Static Web Apps](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/) series. Check out the following videos:
+
+<iframe  width="560" height="315" frameborder="0" src="https://aka.ms/docs/player?show=azure-tips-and-tricks-static-web-apps&ep=how-to-integrate-authentication-in-azure-static-web-apps-8-of-16--azure-tips-and-tricks-static-web-a"></iframe>
+
+<iframe  width="560" height="315" frameborder="0" src="https://aka.ms/docs/player?show=azure-tips-and-tricks-static-web-apps&ep=how-to-configure-authorization-in-azure-static-web-apps-9-of-16--azure-tips-and-tricks-static-web-ap"></iframe>
+
+---
+
+## Exercise: Try it!
+
+One popular feature that modern web apps often support is the ability to assign a custom role to an authenticated user (based on some identifiable context) and then regulate their access to various routes or features in the application based on that assigned role. **How can we make that happen in Static Web Apps?**
+
+There's a [**tutorial**](https://docs.microsoft.com/en-us/azure/static-web-apps/assign-roles-microsoft-graph) that teaches you how! 
+ * Authenticate the user using the managed [Azure Active Directory](https://docs.microsoft.com/en-us/azure/active-directory/fundamentals/active-directory-whatis) API endpoint.
+ * Query [Microsoft Graph](https://developer.microsoft.com/graph) to determine their Active Directory group membership.
+ * Use that membership to assign them a custom role.
+
+**Challenge Yourself!** 
+
+Update the application behavior in the `staticwebapp.config.json` file to restrict user access to specific routes by specifying `allowedRoles` for those routes. Test what happens when the custom role above is added, and then removed, from the collection of allowedRoles.
+
+---
+
+## Useful Resources
+
+1. [Authentication and Authorization in SWA](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations)
+2. [Accessing authenticated user information in SWA](https://docs.microsoft.com/en-us/azure/static-web-apps/user-information?tabs=javascript)
+3. [Implement custom authentication in SWA](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=aad)
+4. Tutorial: [Assign custom roles using Microsoft Graph and AAD](https://docs.microsoft.com/en-us/azure/static-web-apps/assign-roles-microsoft-graph)
+5. Video Series: [Azure Tips And Tricks - Static Web Apps](https://docs.microsoft.com/en-us/shows/azure-tips-and-tricks-static-web-apps/)
