Week 1, Day 5 Post => Reviewed

--- a/www/blog/2021-05-06.md
+++ b/www/blog/2021-05-06.md
@@ -44,15 +44,16 @@ All pre-configured providers are active by default, with their own pre-defined A
  * Want to block a specific pre-configured provider? Just [add a blocking rule](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#block-an-authentication-provider) to their login route to ensure no user is allowed access to it.
  * Want to send users to custom pages after successful or failed login attempts? Use [query parameters and route rules](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#post-login-redirect) to make this work.
 
-This is the default _managed authentication_ experience. But what if you want more flexibility with the registration process (used by a pre-configured provider) or want to add a new one (custom provider)?
+This is the default _managed authentication_ experience. 
 
 ## Custom Auth 
 
-This is where _custom authentication_ options come in. 
+But what if you want more flexibility with the registration process (used by a pre-configured provider) or want to add a new one (custom provider)?
+This is where _custom authentication_ options come in, allowing you to override the defaults.
 
-You can [configure custom providers](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=aad#configure-a-custom-identity-provider) if they support the [OpenID Connect](https://openid.net/connect/) standard. By configuring at least one custom provider, you are effectively disabling the pre-configured provider options.
+You can [configure one or more custom providers](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=aad#configure-a-custom-identity-provider) for this purpose. Azure Static Web Apps has **[built-in support](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#configure-a-custom-identity-provider) for custom authentication using: _Apple, Facebook, Google, Twitter, GitHub - and AAD_!** You can also configure custom providers that support [OpenID Connect](https://openid.net/connect/) standard. 
 
-How do you configure them? Just add the provider's configuration information to the `auth` section of the `staticwebapps.config.json` file. Check out [the documentation](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#configure-a-custom-identity-provider) for the relevant configuration properties defined for custom providers like _Apple_, _Facebook_, _Google_ etc. **This is also a good example for using Application Settings (environment variables)** for representing sensitive configuration information in a privacy-preserving way.
+By configuring at least one custom provider, you are effectively disabling pre-configured provider options. To configure custom providers, add config information to the `auth` section of the `staticwebapps.config.json` file. This is also a good place to use _Application Settings_ (environment variables) to store potentially sensitive configuration data in a privacy-preserving way.
 
 Azure Static Web Apps makes custom registrations easy by providing standard route patterns for [_Login_, _Logout_ and _User Profile_](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#authentication-callbacks) requests, as well as [redirect URLs](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-custom?tabs=apple#authentication-callbacks) for authentication callbacks (from the custom provider) on login/logout.
 
@@ -61,7 +62,7 @@ Azure Static Web Apps makes custom registrations easy by providing standard rout
 There are three key concepts you need to know in this context:
  * Every Static Web Apps user has one or more roles assigned to them.
  * There are 2 built-in roles ("anonymous" and "authenticated")
- * You can define custom roles & assign users by-invite or by-function.
+ * Define custom roles & assign users **[by invitation](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations#add-a-user-to-a-role)** or **[by-function](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=function#add-a-user-to-a-role)**.
 
 Let's review these quickly. 
 
